# -Payment-Transaction-Monitoring-and-Analytics-System

./: .env.example  .gitignore  Daily_Summary_Table.go  Merchant.go  README.md  Transaction.go  docker-compose.yml  go.mod  go.sum  handle.go  main.go  package.json  seed.sql  transaction.go  vercel.json
api/: index.js  package.json
dashboard-api/: migrate.js  package-lock.json  server.js
grpcclient/: client.go
handlers/: handler.go
internal/config/: config.go
internal/database/: db.go
internal/grpcclient/: client.go
internal/handlers/: handlers.go
internal/models/: models.go
internal/server/: server.go
payment-dashboard-ui/: index.html  lint.txt  package-lock.json  package.json  tailwind.config.js  tsc-error.txt
payment-dashboard-ui/src/: App.tsx  index.css
payment-dashboard-ui/src/components/: Header.tsx  MainChart.tsx  Sidebar.tsx  StatsGrid.tsx
payment-dashboard-ui/src/context/: AuthContext.tsx
payment-dashboard-ui/src/pages/: Dashboard.tsx  Login.tsx  Payments.tsx  Refunds.tsx  Reports.tsx
proto/: payment.proto
routes/: routes.go
rust-processor/: Cargo.toml
rust-processor/migrations/: 01_initial_schema.sql  03_auth_schema.sql
rust-processor/proto/: payment.proto
rust-processor/src/: db.rs  main.rs  service.rs
